# youbot_gripper_moveit_plugin

./: CMakeLists.txt  README.md  package.xml  youbot_gripper_moveit_plugin_description.xml
include/moveit_simple_controller_manager/: action_based_controller_handle.h  follow_joint_trajectory_controller_handle.h  gripper_controller_handle.h
include/youbot_gripper_moveit_plugin/: action_based_controller_handle.h  follow_joint_trajectory_controller_handle.h  gripper_controller_handle.h
src/: moveit_simple_controller_manager.cpp  youbot_gripper_moveit_plugin.cpp
