<package>
  <name>youbot_gripper_moveit_plugin</name>
  <version>0.0.1</version>
  <description>A generic, simple controller manager plugin for MoveIt and youbot's gripper.</description>
  <author email="ferherranz@gmail.com">Fernando Herranz</author>
  <maintainer email="ferherranz@gmail.com">Fernando Herranz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <export>
    <moveit_core plugin="${prefix}/youbot_gripper_moveit_plugin_description.xml"/>
  </export>

</package>
